Aot tests should include Java assertions into AOT compiled code

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • b156

        compiler/aot/calls tests intermittently fails with "Unexpected callee compilation level: expected -1 to equal 0". As stated in JDK-8171134, aot tests should use -UseCompressedOops, so, compiler/aot/calls tests should be updated respectively. Tests also should be updated to have verbose information via -XX:+PrintAOT

              Assignee:
              Vladimir Kozlov
              Reporter:
              Dmitrij Pochepko
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved: