8172054: Aot tests should include Java assertions into AOT compiled code

Reviewed-by: iveresov